--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@coinbase/wallet-sdk": "^3.9.3",
     "@ethersproject/shims": "^5.8.0",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@privy-io/expo": "^0.49.0",
     "@privy-io/expo-native-extensions": "^0.0.4",
+    "@privy-io/react-auth": "^2.6.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@solana-mobile/mobile-wallet-adapter-protocol": "^2.1.5",
@@ -49,6 +51,7 @@
     "expo-video": "~2.0.5",
     "expo-web-browser": "~14.0.2",
     "fast-text-encoding": "^1.0.6",
+    "lit": "^3.2.1",
     "lucide-react-native": "^0.477.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
