fixed and changed the hardcoded data

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-EXPO_PUBLIC_PRIVY_APP_ID="cm7xb8o7h002bai0oaxp2opie"
-EXPO_PUBLIC_PRIVY_CLIENT_ID="client-WY5hBym1ntpFK31MbfxeEjxHGvYMhUUNLDvxuLuyLTbHE"
+EXPO_PUBLIC_PRIVY_APP_ID=cm7xb8o7h002bai0oaxp2opie
+EXPO_PUBLIC_PRIVY_CLIENT_ID=client-WY5hBym1ntpFK31MbfxeEjxHGvYMhUUNLDvxuLuyLTbHE
+EXPO_PUBLIC_BACKEND_URL = 'http://localhost:8000'
