--- a/package.json
+++ b/package.json
@@ -15,19 +15,20 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "9shoot-mobile": "file:",
     "@coinbase/wallet-sdk": "^3.9.3",
+    "@coral-xyz/anchor": "0.28.0",
     "@ethersproject/shims": "^5.8.0",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@privy-io/expo": "^0.49.0",
     "@privy-io/expo-native-extensions": "^0.0.4",
-    "@privy-io/react-auth": "^2.6.1",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@solana-mobile/mobile-wallet-adapter-protocol": "^2.1.5",
     "@solana-mobile/mobile-wallet-adapter-protocol-web3js": "^2.1.5",
     "@solana/web3.js": "^1.98.0",
-    "9shoot-mobile": "file:",
     "axios": "^1.8.2",
     "buffer": "^6.0.3",
     "eas-cli": "^15.0.14",
