--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "entrypoint.js",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
@@ -26,8 +26,8 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "@solana-mobile/mobile-wallet-adapter-protocol": "^2.1.5",
-    "@solana-mobile/mobile-wallet-adapter-protocol-web3js": "^2.1.5",
+    "@solana-mobile/mobile-wallet-adapter-protocol": "2.0.0",
+    "@solana-mobile/mobile-wallet-adapter-protocol-web3js": "2.0.0",
     "@solana/web3.js": "^1.98.0",
     "axios": "^1.8.2",
     "buffer": "^6.0.3",
