--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "9shoot-mobile",
+  "name": "nineshoot-mobile",
   "main": "entrypoint.js",
   "version": "1.0.0",
   "scripts": {
@@ -15,7 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "9shoot-mobile": "file:",
+    "nineshoot-mobile": "file:",
     "@coinbase/wallet-sdk": "^3.9.3",
     "@coral-xyz/anchor": "0.28.0",
     "@ethersproject/shims": "^5.8.0",
@@ -26,7 +26,6 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "@solana-mobile/mobile-wallet-adapter-protocol": "2.0.0",
     "@solana-mobile/mobile-wallet-adapter-protocol-web3js": "2.0.0",
     "@solana/web3.js": "^1.98.0",
     "axios": "^1.8.2",
