--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "nineshoot-mobile",
-    "slug": "nineshoot-mobile",
+    "name": "9shoot",
+    "slug": "9shoot",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -53,7 +53,7 @@
         "origin": false
       },
       "eas": {
-        "projectId": "aad18b66-f66d-4deb-a21c-50c716fff6a6"
+        "projectId": "08f2a381-4166-4111-b632-866574194b79"
       }
     }
   }
