--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@react-navigation/native": "^7.0.14",
     "@solana-mobile/mobile-wallet-adapter-protocol-web3js": "2.0.0",
     "@solana/web3.js": "^1.98.0",
+    "assert": "^2.1.0",
     "axios": "^1.8.2",
     "buffer": "^6.0.3",
     "eas-cli": "^15.0.14",
