--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@solana/web3.js": "^1.98.0",
     "assert": "^2.1.0",
     "axios": "^1.8.2",
+    "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "eas-cli": "^15.0.14",
     "expo": "~52.0.36",
     "expo-apple-authentication": "~7.1.3",
@@ -53,12 +55,16 @@
     "expo-video": "~2.0.5",
     "expo-web-browser": "~14.0.2",
     "fast-text-encoding": "^1.0.6",
+    "https-browserify": "^1.0.0",
     "lit": "^3.2.1",
     "lucide-react-native": "^0.477.0",
     "nineshoot-mobile": "file:",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-modal": "^13.0.1",
@@ -70,7 +76,9 @@
     "react-native-svg": "15.8.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
