--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@coinbase/wallet-sdk": "^3.9.3",
-    "@coral-xyz/anchor": "0.28.0",
+    "@coral-xyz/anchor": "^0.30.1",
     "@ethersproject/shims": "^5.8.0",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
