--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-passkeys": "^0.3.1",
     "react-native-qrcode-styled": "^0.3.3",
+    "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
