--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 EXPO_PUBLIC_PRIVY_APP_ID=cm7xb8o7h002bai0oaxp2opie
 EXPO_PUBLIC_PRIVY_CLIENT_ID=client-WY5hBym1ntpFK31MbfxeEjxHGvYMhUUNLDvxuLuyLTbHE
 EXPO_PUBLIC_BACKEND_URL = 'https://backend.9shoot.fun'
-EXPO_PUBLIC_SOLANA_RPC_URL = 'https://rpc.mainnet-alpha.sonic.game'
+EXPO_PUBLIC_SOLANA_RPC_URL = 'https://api.testnet.v1.sonic.game'
