added scroll view

--- a/.env
+++ b/.env
@@ -1,4 +1,1 @@
-EXPO_PUBLIC_PRIVY_APP_ID=cm7xb8o7h002bai0oaxp2opie
-EXPO_PUBLIC_PRIVY_CLIENT_ID=client-WY5hBym1ntpFK31MbfxeEjxHGvYMhUUNLDvxuLuyLTbHE
-EXPO_PUBLIC_BACKEND_URL = 'https://backend.9shoot.fun'
-EXPO_PUBLIC_SOLANA_RPC_URL = 'https://rpc.mainnet-alpha.sonic.game'
+EXPO_PUBLIC_BACKEND_URL = 'http://192.168.1.36:8000'
