--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -86,9 +86,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.pramaths.xnineshootmobile'
+    namespace 'com.pramaths.shootwin'
     defaultConfig {
-        applicationId 'com.pramaths.xnineshootmobile'
+        applicationId 'com.pramaths.shootwin'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
