--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:scheme="myapp"/>
-        <data android:scheme="com.pramaths.xnineshootmobile"/>
+        <data android:scheme="com.pramaths.shootwin"/>
       </intent-filter>
     </activity>
   </application>
