--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@solana-mobile/mobile-wallet-adapter-protocol-web3js": "2.0.0",
     "@solana/web3.js": "^1.98.0",
     "assert": "^2.1.0",
-    "axios": "^1.8.2",
+    "axios": "^1.8.4",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
@@ -36,16 +36,19 @@
     "expo": "~52.0.36",
     "expo-apple-authentication": "~7.1.3",
     "expo-application": "~6.0.2",
+    "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.3",
     "expo-clipboard": "^7.0.1",
-    "expo-constants": "~17.0.7",
+    "expo-constants": "~17.0.8",
     "expo-crypto": "~14.0.2",
+    "expo-device": "~7.0.2",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-image": "~2.0.6",
     "expo-image-picker": "^16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
+    "expo-notifications": "~0.29.14",
     "expo-router": "~4.0.17",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.22",
@@ -55,6 +58,7 @@
     "expo-video": "~2.0.5",
     "expo-web-browser": "~14.0.2",
     "fast-text-encoding": "^1.0.6",
+    "firebase": "^11.5.0",
     "https-browserify": "^1.0.0",
     "lit": "^3.2.1",
     "lucide-react-native": "^0.477.0",
@@ -79,7 +83,8 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0"
+    "stream-http": "^3.2.0",
+    "expo-sharing": "~13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
