--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "expo-clipboard": "^7.0.1",
     "expo-constants": "~17.0.8",
     "expo-crypto": "~14.0.2",
+    "expo-dev-client": "~5.0.14",
     "expo-device": "~7.0.2",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
@@ -51,6 +52,7 @@
     "expo-notifications": "~0.29.14",
     "expo-router": "~4.0.17",
     "expo-secure-store": "~14.0.1",
+    "expo-sharing": "~13.0.1",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
@@ -64,6 +66,7 @@
     "lucide-react-native": "^0.477.0",
     "nineshoot-mobile": "file:",
     "os-browserify": "^0.3.0",
+    "otpless-react-native": "^1.2.4",
     "path-browserify": "^1.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -83,8 +86,7 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "expo-sharing": "~13.0.1"
+    "stream-http": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
