--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "shoot-win",
-    "slug": "shoot-win",
+    "name": "spotwin",
+    "slug": "spotwin",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
