--- a/eas.json
+++ b/eas.json
@@ -1,47 +1,55 @@
 {
-    "build": {
-      "base": {
-        "node": "18.18.0",
-        "yarn": "1.22.19",
-        "env": {
-          "APP_ENV": "base"
-        },
-        "android": {
-          "image": "ubuntu-22.04-jdk-17-ndk-r21e",
-                "env": {
-            "PLATFORM": "android"
-          }
-        }
+  "build": {
+    "base": {
+      "node": "18.18.0",
+      "yarn": "1.22.19",
+      "env": {
+        "APP_ENV": "base"
       },
-      "development": {
-        "extends": "base",
-        "developmentClient": true,
+      "android": {
+        "image": "ubuntu-22.04-jdk-17-ndk-r21e",
         "env": {
-          "APP_ENV": "development"
-        },
-        "android": {
-          "buildType": "apk",
-          "distribution": "internal"
+          "PLATFORM": "android"
         }
+      }
+    },
+    "development": {
+      "extends": "base",
+      "developmentClient": true,
+      "env": {
+        "APP_ENV": "development"
       },
-      "preview": {
-        "extends": "base",
-        "distribution": "internal",
-        "android": {
-          "buildType": "apk"
-        },
-        "env": {
-          "APP_ENV": "preview"
-        }
+      "android": {
+        "buildType": "apk",
+        "distribution": "internal"
+      }
+    },
+    "preview": {
+      "extends": "base",
+      "distribution": "internal",
+      "android": {
+        "buildType": "apk"
       },
-      "production": {
-        "extends": "base",
-        "android": {
-          "buildType": "app-bundle"
-        },
-        "env": {
-          "APP_ENV": "production"
-        }
+      "env": {
+        "APP_ENV": "preview"
+      }
+    },
+    "production": {
+      "extends": "base",
+      "android": {
+        "buildType": "app-bundle"
+      },
+      "env": {
+        "APP_ENV": "production"
+      }
+    }
+  },
+  "submit": {
+    "production": {
+      "android": {
+        "serviceAccountKeyPath": "./playstore.json",
+        "track": "internal"
       }
     }
   }
+}
