--- a/eas.json
+++ b/eas.json
@@ -49,6 +49,9 @@
       "android": {
         "serviceAccountKeyPath": "./playstore.json",
         "track": "internal"
+      },
+      "ios": {
+        "ascAppId": "6743806381"
       }
     }
   }
