--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-svg-transformer": "^1.5.0",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
