--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "react-native-svg": "15.8.0",
     "react-native-svg-transformer": "^1.5.0",
     "zustand": "^5.0.3",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "expo-task-manager": "~12.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
