--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-blur": "~14.0.3",
     "expo-clipboard": "^7.0.1",
     "expo-constants": "~17.0.8",
+    "expo-contacts": "~14.0.5",
     "expo-crypto": "~14.0.2",
     "expo-dev-client": "~5.0.14",
     "expo-device": "~7.0.2",
@@ -45,6 +46,8 @@
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
+    "expo-task-manager": "~12.0.6",
+    "expo-updates": "~0.27.4",
     "fast-text-encoding": "^1.0.6",
     "lit": "^3.2.1",
     "lucide-react-native": "^0.477.0",
@@ -54,6 +57,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-modal": "^13.0.1",
@@ -63,9 +67,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-svg-transformer": "^1.5.0",
-    "zustand": "^5.0.3",
     "react-native-web": "~0.19.13",
-    "expo-task-manager": "~12.0.6"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
