--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@thirdweb-dev/react-native-adapter": "^1.5.4",
     "axios": "^1.8.4",
     "buffer": "^6.0.3",
     "eas-cli": "^15.0.14",
@@ -48,6 +50,7 @@
     "expo-system-ui": "~4.0.8",
     "expo-task-manager": "~12.0.6",
     "expo-updates": "~0.27.4",
+    "expo-web-browser": "~14.0.2",
     "fast-text-encoding": "^1.0.6",
     "lit": "^3.2.1",
     "lucide-react-native": "^0.477.0",
@@ -61,6 +64,7 @@
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-modal": "^13.0.1",
     "react-native-passkeys": "^0.3.1",
     "react-native-reanimated": "~3.16.1",
@@ -69,6 +73,7 @@
     "react-native-svg": "15.8.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-web": "~0.19.13",
+    "thirdweb": "^5.98.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
