--- a/package.json
+++ b/package.json
@@ -17,21 +17,23 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@privy-io/expo": "^0.53.1",
+    "@privy-io/expo-native-extensions": "^0.0.5",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "@thirdweb-dev/react-native-adapter": "^1.5.4",
     "axios": "^1.8.4",
     "buffer": "^6.0.3",
     "eas-cli": "^15.0.14",
     "expo": "~52.0.36",
-    "expo-application": "~6.0.2",
+    "expo-apple-authentication": "~5.0.1",
+    "expo-application": "~5.0.1",
     "expo-blur": "~14.0.3",
-    "expo-clipboard": "^7.0.1",
+    "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.8",
     "expo-contacts": "~14.0.5",
-    "expo-crypto": "~14.0.2",
+    "expo-crypto": "~12.0.0",
     "expo-dev-client": "~5.0.14",
     "expo-device": "~7.0.2",
     "expo-font": "~13.0.4",
@@ -39,10 +41,10 @@
     "expo-image": "~2.0.6",
     "expo-image-picker": "^16.0.6",
     "expo-linear-gradient": "~14.0.2",
-    "expo-linking": "~7.0.5",
+    "expo-linking": "~3.3.1",
     "expo-notifications": "~0.29.14",
     "expo-router": "~4.0.17",
-    "expo-secure-store": "~14.0.1",
+    "expo-secure-store": "~12.0.0",
     "expo-sharing": "~13.0.1",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
@@ -50,7 +52,7 @@
     "expo-system-ui": "~4.0.8",
     "expo-task-manager": "~12.0.6",
     "expo-updates": "~0.27.4",
-    "expo-web-browser": "~14.0.2",
+    "expo-web-browser": "~12.0.0",
     "fast-text-encoding": "^1.0.6",
     "lit": "^3.2.1",
     "lucide-react-native": "^0.477.0",
@@ -66,14 +68,16 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "~1.11.0",
     "react-native-modal": "^13.0.1",
-    "react-native-passkeys": "^0.3.1",
+    "react-native-passkeys": "^0.3.3",
+    "react-native-qrcode-styled": "^0.3.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-web": "~0.19.13",
-    "thirdweb": "^5.98.0",
+    "react-native-webview": "11.23.1",
+    "viem": "^2.29.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
