--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@ethersproject/shims": "^5.8.0",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@privy-io/expo": "^0.53.1",
+    "@privy-io/expo-native-extensions": "^0.0.5",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
@@ -24,6 +27,7 @@
     "buffer": "^6.0.3",
     "eas-cli": "^15.0.14",
     "expo": "~52.0.36",
+    "expo-apple-authentication": "~7.1.3",
     "expo-application": "~6.0.2",
     "expo-blur": "~14.0.3",
     "expo-clipboard": "^7.0.1",
@@ -48,6 +52,7 @@
     "expo-system-ui": "~4.0.8",
     "expo-task-manager": "~12.0.6",
     "expo-updates": "~0.27.4",
+    "expo-web-browser": "~14.0.2",
     "fast-text-encoding": "^1.0.6",
     "lit": "^3.2.1",
     "lucide-react-native": "^0.477.0",
@@ -61,14 +66,16 @@
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-modal": "^13.0.1",
-    "react-native-passkeys": "^0.3.1",
+    "react-native-passkeys": "^0.3.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
+    "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-web": "~0.19.13",
+    "react-native-webview": "13.12.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
