--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nineshoot-mobile",
+  "name": "spotwin",
   "main": "entrypoint.js",
   "version": "1.0.0",
   "scripts": {
@@ -56,7 +56,7 @@
     "fast-text-encoding": "^1.0.6",
     "lit": "^3.2.1",
     "lucide-react-native": "^0.477.0",
-    "nineshoot-mobile": "file:",
+    "nativewind": "^4.1.23",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "react": "18.3.1",
@@ -69,13 +69,14 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-modal": "^13.0.1",
     "react-native-passkeys": "^0.3.3",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "13.4.0",
+    "react-native-svg": "^15.3.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
+    "tailwindcss": "^3.4.17",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
