--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@privy-io/expo": "^0.53.1",
     "@privy-io/expo-native-extensions": "^0.0.5",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/slider": "^4.5.6",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.8.4",
