--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@react-native-community/slider": "^4.5.6",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@solana/spl-token": "^0.4.13",
+    "@solana/web3.js": "^1.98.2",
     "axios": "^1.8.4",
     "buffer": "^6.0.3",
     "eas-cli": "^15.0.14",
@@ -70,6 +72,7 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-modal": "^13.0.1",
     "react-native-passkeys": "^0.3.3",
+    "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
