--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-native-svg-transformer": "^1.5.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
+    "spotwin": "file:",
     "tailwindcss": "^3.4.17",
     "zustand": "^5.0.3"
   },
