added twitter login

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-EXPO_PUBLIC_BACKEND_URL = 'http://192.168.1.34:8000' 
-# EXPO_PUBLIC_BACKEND_URL = "https://backend.spotwin.in"
+# EXPO_PUBLIC_BACKEND_URL = 'http://192.168.1.34:8000' 
+EXPO_PUBLIC_BACKEND_URL = "https://breakout.spotwin.in"
 EXPO_PUBLIC_PRIVY_APP_ID = "cmaihbha7013wi90k01y2lsup"
 EXPO_PUBLIC_PRIVY_APP_CLIENT_ID = "client-WY6LHPYBTu4PMKroMWdAvrVN4V3BShKXrV6jskfrX25hS"
 EXPO_PUBLIC_SOLANA_RPC_URL = "https://api.devnet.solana.com"
