--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@privy-io/expo": "^0.53.1",
     "@privy-io/expo-native-extensions": "^0.0.5",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/slider": "^4.5.6",
+    "@react-native-community/slider": "4.5.5",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@solana/spl-token": "^0.4.13",
@@ -34,7 +34,7 @@
     "expo-apple-authentication": "~7.1.3",
     "expo-application": "~6.0.2",
     "expo-blur": "~14.0.3",
-    "expo-clipboard": "^7.0.1",
+    "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.8",
     "expo-contacts": "~14.0.5",
     "expo-crypto": "~14.0.2",
@@ -43,7 +43,7 @@
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-image": "~2.0.6",
-    "expo-image-picker": "^16.0.6",
+    "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-notifications": "~0.29.14",
@@ -65,7 +65,7 @@
     "path-browserify": "^1.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.9",
     "react-native-country-codes-picker": "^2.3.5",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-fs": "^2.20.0",
@@ -77,7 +77,7 @@
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.3.0",
+    "react-native-svg": "15.8.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
