--- a/app.json
+++ b/app.json
@@ -14,6 +14,7 @@
         "dark": "./assets/images/apple.png",
         "tinted": "./assets/images/apple.png"
       },
+      "userAppleSignIn": true,
       "supportsTablet": true,
       "bundleIdentifier": "com.pramaths.spotwin",
       "buildNumber": "13",
@@ -70,7 +71,8 @@
           "faceIDPermission": "Allow Spotwin to access your Face ID biometric data."
         }
       ],
-      "expo-font"
+      "expo-font",
+      "expo-apple-authentication"
     ],
     "experiments": {
       "typedRoutes": true
